fixed overflow-horisontal

--- a/src/components/HeroSection/HeroSection.module.css
+++ b/src/components/HeroSection/HeroSection.module.css
@@ -1,5 +1,4 @@
 .container {
-  width: 100vw;
   height: 80vh;
   display: flex;
   flex-direction: column;
